@@ -5,6 +5,7 @@ SimpleComplex/Config 1.x, 2017-07-02
 - Added example .ini file.
 - Ini based config support safe mode 'candidate' cache build;
   spells far safer refresh().
+- Export from cache.
 
 SimpleComplex/Config 1.x, 2017-07-01
 ------------------------------------
